--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>Chao Chen</title>
 
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-
+    <title>Web Developer - Chao Chen</title>
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
@@ -14,22 +14,51 @@
 
   </head>
   <body>
+
+  <nav class="navbar navbar-inverse">
+    <div class="container-fluid">
+      <div class="navbar-header">
+        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button>
+        <a class="navbar-brand" href="#">Chao Chen</a>
+      </div>
+      <div class="collapse navbar-collapse" id="myNavbar">
+
+        <ul class="nav navbar-nav navbar-right">
+          <li><a href="#">Home</a></li>
+          <li><a href="#">About</a></li>
+          <li><a href="#">Portfolio</a></li>
+          <li><a href="#">Contact</a></li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+
+    <div id="content" class="container-fluid"></div>
+
       <div class="container-fluid">
-        <h1>personal website<h1>
-        <p>These are some texts.</p>
 
         <div class="row">
             <div class="col-xs-2 col-sm-6">
                 <ul class="list-group">
                     <li class="list-group-item"><a href="https://jonathanchaochen.github.io/Jivin-Jazz/">Jivin Jazz</a></li>
                     <li class="list-group-item"><a href="https://jonathanchaochen.github.io/BaoBar/">Bao Bar</a></li>
-
                 </ul>
             </div>
         </div>
 
 
       </div>
+
+      <footer class="row text-center">
+            <div id="footer-top"></div>
+            <div id="footer-bottom">
+                <p>&copy; 2017 Chao Chen. All rights reserved</p>
+            </div>
+      </footer>
 
   </body>
 </html>
