--- a/index.html
+++ b/index.html
@@ -10,14 +10,19 @@
     <link rel="icon" href="images/Chao Logo-Black.png" sizes="32*32">
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 
+
+    <link rel="stylesheet" href="stylesheet.css">
 
   </head>
   <body>
 
   <nav class="navbar navbar-inverse">
+
+
     <div class="container-fluid">
       <div class="navbar-header">
         <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
@@ -25,7 +30,7 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="#">Chao Chen</a>
+        <a class="navbar-brand" href="#"> <img src="images/Chao-Logo-White.png" id="logo" alt="logo" ></a>
       </div>
       <div class="collapse navbar-collapse" id="myNavbar">
 
@@ -37,6 +42,14 @@
         </ul>
       </div>
     </div>
+
+    <div id="title" class="text-center">
+        <h1>Chao Chen</h1>
+        <h2>Web Developer</h2>
+    </div>
+
+
+
   </nav>
 
     <div id="content" class="container-fluid"></div>
