--- a/index.html
+++ b/index.html
@@ -52,12 +52,18 @@
 
   </nav>
 
-    <div id="content" class="container-fluid"></div>
+    <div id="content" class="container-fluid">
 
-      <div class="container-fluid">
+        <div class="quotation" class="row">
+            <blockquote class="col-xs-12">
+                <q>There are three responses to a piece of design – yes, no, and WOW! Wow is the one to aim for.</q>
+                <p class="text-right">- Milton Glaser</q>
+            </blockquote>
+
+        </div>
 
         <div class="row">
-            <div class="col-xs-6 col-sm-12">
+            <div class="col-xs-12">
                 <ul class="list-group">
                     <li class="list-group-item"><a href="https://jonathanchaochen.github.io/Jivin-Jazz/">Jivin Jazz</a></li>
                     <li class="list-group-item"><a href="https://jonathanchaochen.github.io/BaoBar/">Bao Bar</a></li>
@@ -69,7 +75,10 @@
       </div>
 
       <footer class="row text-center">
-            <div id="footer-top"></div>
+            <div id="footer-top">
+                <a href="mailto:chaochen42@gmail.com"> <img src="images/email.png" alt="email"></a>
+                <a href="https://www.facebook.com/profile.php?id=100004304113573" target="_blank"><img src="images/fb_icon_325x325.png" alt="facebook"></a>
+            </div>
             <div id="footer-bottom">
                 <p>&copy; 2017 Chao Chen. All rights reserved</p>
             </div>
