--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   <nav class="navbar navbar-inverse">
 
 
-    <div class="container-fluid">
+    <div id="header-top" class="container-fluid">
       <div class="navbar-header">
         <button type="button" id="hamber" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
           <span class="icon-bar"></span>
@@ -34,8 +34,8 @@
       </div>
       <div class="collapse navbar-collapse" id="myNavbar">
 
-        <ul class="nav navbar-nav navbar-right">
-          <li><a href="#">Home</a></li>
+        <ul id="navlist" class="nav navbar-nav navbar-right">
+          <li class="selected"><a href="#" >Home</a></li>
           <li><a href="#">About</a></li>
           <li><a href="#">Portfolio</a></li>
           <li><a href="#">Contact</a></li>
