--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@
                 <ul class="list-group">
                     <li class="list-group-item"><a href="https://jonathanchaochen.github.io/Jivin-Jazz/">Jivin Jazz</a></li>
                     <li class="list-group-item"><a href="https://jonathanchaochen.github.io/BaoBar/">Bao Bar</a></li>
+                    <li class="list-group-item"><a href="https://jonathanchaochen.github.io/BaoBarV2/">Bao Bar V2</a></li>
                 </ul>
             </div>
         </div>
