change email pic

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 
       <footer class="row text-center">
             <div id="footer-top">
-                <a href="mailto:chaochen42@gmail.com"> <img src="images/email.png" alt="email"></a>
+                <a href="mailto:chaochen42@gmail.com"> <img src="images/emailnew2.png" alt="email"></a>
                 <a href="https://www.facebook.com/profile.php?id=100004304113573" target="_blank"><img src="images/fb_icon_325x325.png" alt="facebook"></a>
             </div>
             <div id="footer-bottom">
