delete an old list

--- a/index.html
+++ b/index.html
@@ -66,8 +66,8 @@
             <div class="col-xs-12">
                 <ul class="list-group">
                     <li class="list-group-item"><a href="https://jonathanchaochen.github.io/Jivin-Jazz/">Jivin Jazz</a></li>
-                    <li class="list-group-item"><a href="https://jonathanchaochen.github.io/BaoBar/">Bao Bar</a></li>
-                    <li class="list-group-item"><a href="https://jonathanchaochen.github.io/BaoBarV2/">Bao Bar V2</a></li>
+
+                    <li class="list-group-item"><a href="https://jonathanchaochen.github.io/BaoBarV2/">Bao Bar</a></li>
                 </ul>
             </div>
         </div>
