make a porfolio page

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name = "description"  content = "Web developer Chao Chen. Bulid websites for small business in  Christchurch, New ZeaLand.">
     <title>Web Developer - Chao Chen</title>
 
     <link rel="icon" href="images/Chao Logo-Black.png" sizes="32*32">
@@ -37,7 +38,7 @@
         <ul id="navlist" class="nav navbar-nav navbar-right">
           <li class="selected"><a href="#" >Home</a></li>
           <li><a href="#">About</a></li>
-          <li><a href="#">Portfolio</a></li>
+          <li><a href="portfolio.html">Portfolio</a></li>
           <li><a href="#">Contact</a></li>
         </ul>
       </div>
@@ -65,9 +66,9 @@
         <div class="row">
             <div class="col-xs-12">
                 <ul class="list-group">
-                    <li class="list-group-item"><a href="https://jonathanchaochen.github.io/Jivin-Jazz/">Jivin Jazz</a></li>
+                    <li class="list-group-item"><a href="https://ashleynolan.co.uk/blog/launching-sublime-from-the-terminal">Launch Sublime Text 2 or 3 from the Mac OSX Terminal</a></li>
 
-                    <li class="list-group-item"><a href="https://jonathanchaochen.github.io/BaoBarV2/">Bao Bar</a></li>
+                    <li class="list-group-item"><a href="http://ianlunn.co.uk/articles/quickly-showhide-hidden-files-mac-os-x-mavericks/#disqus_thread">Quickly Show/Hide Hidden Files on macOS </a></li>
                 </ul>
             </div>
         </div>
@@ -87,14 +88,6 @@
 
   </body>
 </html>
-
-
-
-
-
-
-
-
 
 
 
