setting features of portfolio

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 
         </div>
 
-        <div class="row">
+        <div class="row blog">
             <div class="col-xs-12">
                 <ul class="list-group">
                     <li class="list-group-item"><a href="https://ashleynolan.co.uk/blog/launching-sublime-from-the-terminal">Launch Sublime Text 2 or 3 from the Mac OSX Terminal</a></li>
