--- a/portfolio.html
+++ b/portfolio.html
@@ -5,8 +5,8 @@
 
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name = "description"  content = "Web developer Chao Chen. Bulid websites for small business in  Christchurch, New ZeaLand.">
-    <title>Web Developer - Chao Chen</title>
+    <meta name = "description"  content = "Web developer Chao Chen. Portfolio and Assignment">
+    <title>Portfolio - Chao Chen</title>
 
     <link rel="icon" href="images/Chao Logo-Black.png" sizes="32*32">
 
@@ -36,7 +36,7 @@
       <div class="collapse navbar-collapse" id="myNavbar">
 
         <ul id="navlist" class="nav navbar-nav navbar-right">
-          <li><a href="#" >Home</a></li>
+          <li><a href="index.html" >Home</a></li>
           <li><a href="#">About</a></li>
           <li class="selected"><a href="portfolio.html">Portfolio</a></li>
           <li><a href="#">Contact</a></li>
@@ -55,21 +55,35 @@
 
     <div id="content" class="container-fluid">
 
-        <div class="quotation" class="row">
-            <blockquote class="col-xs-12">
-                <q>There are three responses to a piece of design – yes, no, and WOW! Wow is the one to aim for.</q>
-                <p class="text-right">- Milton Glaser</q>
-            </blockquote>
 
-        </div>
+        <div class="row ">
+            <div class="col-xs-12 text-center portfolio">
 
-        <div class="row">
-            <div class="col-xs-12">
-                <ul class="list-group">
-                    <li class="list-group-item"><a href="https://jonathanchaochen.github.io/Jivin-Jazz/">Jivin Jazz</a></li>
+              <div class="project">
+                <h3>Projects</h3>
+                <a href="http://baobar.co.nz/">
+                <div class="images">
+                  <img src="images/baobar.png" alt="Bao Bar">
+                    <p class="reveal">baobar.co.nz</p>
 
-                    <li class="list-group-item"><a href="baobar.co.nz">Bao Bar</a></li>
-                </ul>
+
+                </div>
+                </a>
+              </div>
+
+
+              <div class="assignment">
+                <h3>Assignment</h3>
+                <a href="https://jonathanchaochen.github.io/Jivin-Jazz/">
+                  <div class="images">
+                    <img src="images/jivin-jazz.png" alt="Jivin Jazz">
+                    <p class="reveal">Jivin Jazz</p>
+
+                  </div>
+
+                  </a>
+              </div>
+
             </div>
         </div>
 
