add video of php

--- a/portfolio.html
+++ b/portfolio.html
@@ -63,7 +63,7 @@
                 <h3>Projects</h3>
                 <a href="http://baobar.co.nz/">
                 <div class="images">
-                  <img src="images/baobar.png" alt="Bao Bar">
+                  <img src="images/baobar-re.png" alt="Bao Bar">
                     <p class="reveal">baobar.co.nz</p>
 
 
@@ -76,7 +76,7 @@
                 <h3>Assignment</h3>
                 <a href="https://jonathanchaochen.github.io/Jivin-Jazz/">
                   <div class="images">
-                    <img src="images/jivin-jazz.png" alt="Jivin Jazz">
+                    <img src="images/jivin-jazz-re.png" alt="Jivin Jazz">
                     <p class="reveal">Jivin Jazz</p>
 
                   </div>
