adding fourm images

--- a/portfolio.html
+++ b/portfolio.html
@@ -80,9 +80,29 @@
                     <p class="reveal">Jivin Jazz</p>
 
                   </div>
+                </a>
 
-                  </a>
+                <a href="https://github.com/JonathanChaochen/Jivin-Jazz">
+                  Code
+                </a>
               </div>
+
+              <div class="assignment">
+                <h3>Assignment</h3>
+                <a href="forumvideo.html">
+                  <div class="images">
+                    <img src="images/php294-re.png" alt="php forum">
+                    <p class="reveal">PHP forum</p>
+
+                  </div>
+
+                </a>
+
+                <a href="https://github.com/JonathanChaochen/PHP-Assignment">
+                 Code
+                </a>
+              </div>
+
 
             </div>
         </div>
