--- a/forumvideo.html
+++ b/forumvideo.html
@@ -10,6 +10,8 @@
 
     <link rel="icon" href="images/Chao Logo-Black.png" sizes="32*32">
 
+    <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
+
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
@@ -31,14 +33,14 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="#"> <img src="images/Chao-Logo-White.png" id="logo" alt="logo" ></a>
+        <a class="navbar-brand" href="index.html"> <img src="images/Chao-Logo-White.png" id="logo" alt="logo" ></a>
       </div>
       <div class="collapse navbar-collapse" id="myNavbar">
 
         <ul id="navlist" class="nav navbar-nav navbar-right">
-          <li class="selected"><a href="#" >Home</a></li>
-          <li><a href="#">About</a></li>
-          <li><a href="portfolio.html">Portfolio</a></li>
+          <li><a href="index.html" >Home</a></li>
+          <li><a href="about.html">About</a></li>
+          <li  class="selected"><a href="portfolio.html">Portfolio</a></li>
           <li><a href="#">Contact</a></li>
         </ul>
       </div>
@@ -46,7 +48,7 @@
 
     <div id="title" class="text-center">
         <h1>Chao Chen</h1>
-        <h2>Web Developer</h2>
+        <h2>PHP videos</h2>
     </div>
 
 
@@ -56,7 +58,6 @@
 
 
     <div class="php">
-      <h3 class="text-center">PHP video</h3>
       <div class="video_content">
         <div class="clip">
           <h4>Feature 1: Create Users </h4>
