--- a/portfolio.html
+++ b/portfolio.html
@@ -10,6 +10,8 @@
 
     <link rel="icon" href="images/Chao Logo-Black.png" sizes="32*32">
 
+    <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
+
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
@@ -31,13 +33,13 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="#"> <img src="images/Chao-Logo-White.png" id="logo" alt="logo" ></a>
+        <a class="navbar-brand" href="index.html"> <img src="images/Chao-Logo-White.png" id="logo" alt="logo" ></a>
       </div>
       <div class="collapse navbar-collapse" id="myNavbar">
 
         <ul id="navlist" class="nav navbar-nav navbar-right">
           <li><a href="index.html" >Home</a></li>
-          <li><a href="#">About</a></li>
+          <li><a href="about.html">About</a></li>
           <li class="selected"><a href="portfolio.html">Portfolio</a></li>
           <li><a href="#">Contact</a></li>
         </ul>
@@ -46,7 +48,7 @@
 
     <div id="title" class="text-center">
         <h1>Chao Chen</h1>
-        <h2>Web Developer</h2>
+        <h2>Portfolio</h2>
     </div>
 
 
@@ -56,56 +58,86 @@
     <div id="content" class="container-fluid">
 
 
-        <div class="row ">
+        <div class="row" id="portfolio">
             <div class="col-xs-12 text-center portfolio">
 
               <div class="project">
-                <h3>Projects</h3>
+                <h3> Bao Bar </h3>
                 <a href="http://baobar.co.nz/">
                 <div class="images">
                   <img src="images/baobar-re.png" alt="Bao Bar">
                     <p class="reveal">baobar.co.nz</p>
-
-
                 </div>
                 </a>
               </div>
 
-
+            <div class="assessment">
               <div class="assignment">
-                <h3>Assignment</h3>
-                <a href="https://jonathanchaochen.github.io/Jivin-Jazz/">
+                <h3>Jivin-Jazz Website</h3>
+                <a href="https://jonathanchaochen.github.io/Jivin-Jazz/" class="assignment-image">
                   <div class="images">
                     <img src="images/jivin-jazz-re.png" alt="Jivin Jazz">
-                    <p class="reveal">Jivin Jazz</p>
-
+                    <p class="reveal">Jivin-Jazz</p>
                   </div>
                 </a>
 
                 <a href="https://github.com/JonathanChaochen/Jivin-Jazz">
-                  Code
+                  <p>Code on github</p>
                 </a>
               </div>
 
               <div class="assignment">
-                <h3>Assignment</h3>
-                <a href="forumvideo.html">
+                <h3>Timelog SPA</h3>
+                <a href="http://www.webdeveloperchao.com/timelog/"  >
+                  <div class="images" class="assignment-image">
+                    <img src="images/timelog.png" alt="vue.Js SPA">
+                    <p class="reveal">Timelog SPA</p>
+                  </div>
+
+                </a>
+
+                <a href="https://github.com/JonathanChaochen/timelog">
+                 <p>Code on github</p>
+                </a>
+              </div>
+
+              <div class="assignment">
+                <h3>PHP Forum</h3>
+                <a href="forumvideo.html"  class="assignment-image">
                   <div class="images">
                     <img src="images/php294-re.png" alt="php forum">
-                    <p class="reveal">PHP forum</p>
-
+                    <p class="reveal">PHP Forum</p>
                   </div>
 
                 </a>
 
                 <a href="https://github.com/JonathanChaochen/PHP-Assignment">
-                 Code
+                 <p>Code on github</p>
+                </a>
+              </div>
+
+              <div class="assignment">
+                <h3>PSP3 SPA</h3>
+                <a href="http://www.webdeveloperchao.com/angular1-psp3/"  class="assignment-image">
+                  <div class="images">
+                    <img src="images/bcpr280-re.png" alt="AngularJS SPA">
+                    <p class="reveal">PSP3 SPA</p>
+                  </div>
+
+                </a>
+
+                <a href="https://github.com/JonathanChaochen/angular1-psp3">
+                 <p>Code on github</p>
                 </a>
               </div>
 
 
+
             </div>
-        </div>
+
+
+            </div>
+         </div>  <!-- row ends -->
 
 
       </div>
