adjusting img size

--- a/index.html
+++ b/index.html
@@ -79,6 +79,8 @@
 
     </div>
 
+
+
     <!-- about -->
 
       <div class="row" id="about">
@@ -171,6 +173,7 @@
 
     </div> <!--  row ends  -->
 
+    <hr>
 
     <!-- portfolio -->
 
@@ -256,10 +259,13 @@
      </div>  <!-- row ends -->
 
 
+<hr>
     <!-- contact -->
     <div id="contact">
-      <p>Email: chaochen42@gmail.com</p>
-    </div>
+      <div class="text-center">
+        <a href="mailto:chaochen42@gmail.com"><p>Email: chaochen42@gmail.com</a></p>
+      </div>
+
 
 
 
@@ -273,6 +279,7 @@
                 <p>&copy; 2017 Chao Chen. All rights reserved</p>
             </div>
       </footer>
+      </div>
 
 
 
