--- a/index.html
+++ b/index.html
@@ -85,7 +85,6 @@
 
       <div class="row" id="about">
 
-      <div class="col-sm-6">
 
         <div class="introduction">
 
@@ -99,9 +98,9 @@
 
 
         </div>
-      </div>
 
-      <div class="skills col-sm-6">
+
+      <div class="skills">
           <h3 class="chart-title">My Skills</h3>
           <div>
             <div>
