header photo done

--- a/about.html
+++ b/about.html
@@ -57,11 +57,9 @@
 
 
 
-    <div id="content" class="container-fluid">
+    <!-- <div id="content" class="container-fluid"> -->
 
       <div class="row" id="about">
-
-
 
         <div class="introduction">
 
@@ -150,7 +148,7 @@
     </div> <!--  row ends  -->
 
 
-    </div>
+    <!-- </div> -->
 
 
 
