--- a/forumvideo.html
+++ b/forumvideo.html
@@ -23,7 +23,7 @@
   </head>
   <body>
 
-  <nav class="navbar navbar-inverse">
+  <nav class="navbar navbar-inverse" id="nav-header">
 
 
     <div id="header-top" class="container-fluid">
