--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   </head>
   <body>
 
-  <nav class="navbar navbar-inverse">
+  <nav class="navbar navbar-inverse" id="nav-header">
 
 
     <div id="header-top" class="container-fluid">
@@ -50,8 +50,6 @@
         <h1>Chao Chen</h1>
         <h2>Web Developer</h2>
     </div>
-
-
 
   </nav>
 
@@ -90,12 +88,11 @@
 
             <img src="images/about/chao.png" alt="Chao Chen photo" class="img-circle img-responsive chao">
 
-          <h3 class="text-center">Hi, I'm Chao</h3>
+          <h3 class="">Hi, I'm Chao</h3>
 
           <p>I'm a web developer living in Christchurch, New ZeaLand. I will graduated from Ara Institute of Canterbury in 12/2017.</p>
 
           <p>I am looking for a position related to my skills and qualifications and would like to enjoy developing new features within an Agile / Scrum team.  I would like to have lots of interesting new web projects to get stuck into.</p>
-
 
         </div>
 
@@ -181,7 +178,7 @@
 
           <div class="project">
             <h3> Bao Bar </h3>
-            <a href="http://baobar.co.nz/">
+            <a href="http://baobar.co.nz/" target="_blank">
             <div class="images">
               <img src="images/baobar-re.png" alt="Bao Bar">
                 <p class="reveal">baobar.co.nz</p>
@@ -192,7 +189,7 @@
         <div class="assessment">
           <div class="assignment">
             <h3>Jivin-Jazz Website</h3>
-            <a href="https://jonathanchaochen.github.io/Jivin-Jazz/" class="assignment-image">
+            <a href="https://jonathanchaochen.github.io/Jivin-Jazz/" class="assignment-image" target="_blank">
               <div class="images">
                 <img src="images/jivin-jazz-re.png" alt="Jivin Jazz">
                 <p class="reveal">Jivin-Jazz</p>
@@ -206,7 +203,7 @@
 
           <div class="assignment">
             <h3>Timelog SPA</h3>
-            <a href="http://www.webdeveloperchao.com/timelog/"  >
+            <a href="http://www.webdeveloperchao.com/timelog/"  target="_blank">
               <div class="images" class="assignment-image">
                 <img src="images/timelog.png" alt="vue.Js SPA">
                 <p class="reveal">Timelog SPA</p>
@@ -221,7 +218,7 @@
 
           <div class="assignment">
             <h3>PHP Forum</h3>
-            <a href="forumvideo.html"  class="assignment-image">
+            <a href="forumvideo.html"  class="assignment-image" target="_blank">
               <div class="images">
                 <img src="images/bcpr294-re.png" alt="php forum">
                 <p class="reveal">PHP Forum</p>
