crop some photos and

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 
           <h3 class="">Hi, I'm Chao</h3>
 
-          <p>I'm a web developer living in Christchurch, New ZeaLand. I will graduated from Ara Institute of Canterbury in 12/2017.</p>
+          <p>I'm a web developer living in Christchurch, New ZeaLand now. I will graduated from Ara Institute of Canterbury in 12/2017.</p>
 
           <p>I am looking for a position related to my skills and qualifications and would like to enjoy developing new features within an Agile / Scrum team.  I would like to have lots of interesting new web projects to get stuck into.</p>
 
@@ -102,53 +102,53 @@
           <div>
             <div>
               <img src="images/about/html-re.png" alt="html">
-              <img src="images/about/star.png" alt="star" >
-              <img src="images/about/star.png" alt="star">
-              <img src="images/about/star.png" alt="star">
-              <img src="images/about/star.png" alt="star">
+              <img src="images/about/star-re.png" alt="star" >
+              <img src="images/about/star-re.png" alt="star">
+              <img src="images/about/star-re.png" alt="star">
+              <img src="images/about/star-re.png" alt="star">
             </div>
             <div >
               <img src="images/about/css3.png" alt="css">
-                <img src="images/about/star.png" alt="star">
-                <img src="images/about/star.png" alt="star">
-                <img src="images/about/star.png" alt="star">
-                <img src="images/about/star.png" alt="star">
+                <img src="images/about/star-re.png" alt="star">
+                <img src="images/about/star-re.png" alt="star">
+                <img src="images/about/star-re.png" alt="star">
+                <img src="images/about/star-re.png" alt="star">
             </div>
 
             <div>
               <img src="images/about/js-logo.png" alt="javascript">
-              <img src="images/about/star.png" alt="star">
-              <img src="images/about/star.png" alt="star">
-              <img src="images/about/star.png" alt="star">
-              <img src="images/about/star.png" alt="star">
+              <img src="images/about/star-re.png" alt="star">
+              <img src="images/about/star-re.png" alt="star">
+              <img src="images/about/star-re.png" alt="star">
+              <img src="images/about/star-re.png" alt="star">
             </div>
             <div>
               <img src="images/about/php-elephant.png" alt="php">
-              <img src="images/about/star.png" alt="star">
-              <img src="images/about/star.png" alt="star">
-              <img src="images/about/star.png" alt="star">
-              <img src="images/about/star.png" alt="star">
-              <img src="images/about/star.png" alt="star">
+              <img src="images/about/star-re.png" alt="star">
+              <img src="images/about/star-re.png" alt="star">
+              <img src="images/about/star-re.png" alt="star">
+              <img src="images/about/star-re.png" alt="star">
+              <img src="images/about/star-re.png" alt="star">
             </div>
 
             <div>
              <img src="images/about/MySQL.png" alt="MySQL">
-              <img src="images/about/star.png" alt="star">
-              <img src="images/about/star.png" alt="star">
-              <img src="images/about/star.png" alt="star">
-              <img src="images/about/star.png" alt="star">
+              <img src="images/about/star-re.png" alt="star">
+              <img src="images/about/star-re.png" alt="star">
+              <img src="images/about/star-re.png" alt="star">
+              <img src="images/about/star-re.png" alt="star">
             </div>
 
             <div>
               <img src="images/about/java-logo-large.png" alt="Java">
-              <img src="images/about/star.png" alt="star">
-              <img src="images/about/star.png" alt="star">
+              <img src="images/about/star-re.png" alt="star">
+              <img src="images/about/star-re.png" alt="star">
             </div>
           </div>
 
 
           <div>
-            <h4> Familiar frameworks:</h4>
+            <h3> Familiar frameworks:</h3>
             <a href="https://angularjs.org/">
               <img src="images/about/angular.png" alt="AngularJS">
                 <p class="reveal">123</p>
@@ -160,7 +160,7 @@
               <img src="images/about/laravel.png" alt="Laravel">
             </a>
             <a href="https://v4-alpha.getbootstrap.com/">
-              <img src="images/about/bootstrap-logo.png" alt="Bootstrap">
+              <img src="images/about/bootstrap-re.png" alt="Bootstrap">
             </a>
           </div>
 
@@ -246,9 +246,7 @@
             </a>
           </div>
 
-
-
-        </div>
+        </div> <!-- assessment ends -->
 
 
         </div>
@@ -259,6 +257,7 @@
     <!-- contact -->
     <div id="contact">
       <div class="text-center">
+        <h3>Contact Information</h3>
         <a href="mailto:chaochen42@gmail.com"><p>Email: chaochen42@gmail.com</a></p>
       </div>
 
@@ -269,7 +268,7 @@
             <div id="footer-top">
                 <a href="mailto:chaochen42@gmail.com"> <img src="images/emailnew2.png" alt="email"></a>
                 <a href="https://www.facebook.com/profile.php?id=100004304113573" target="_blank"><img src="images/fb_icon_325x325.png" alt="facebook"></a>
-                <a href="https://github.com/JonathanChaochen" target="_blank"><img src="images/about/github-512.png" alt="github"></a>
+                <a href="https://github.com/JonathanChaochen" target="_blank"><img src="images/about/github-re.png" alt="github"></a>
             </div>
             <div id="footer-bottom">
                 <p>&copy; 2017 Chao Chen. All rights reserved</p>
