adding box-shadow

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 
         <div class="introduction">
 
-            <img src="images/about/chao.png" alt="Chao Chen photo" class="img-circle img-responsive chao">
+            <img src="images/about/chaochen-re-1.jpg" alt="Chao Chen photo" class="img-circle img-responsive chao">
 
           <h3 class="">Hi, I'm Chao</h3>
 
@@ -131,9 +131,8 @@
               <img src="images/about/star-re.png" alt="star">
             </div>
 
-            <div>
+            <div class="mysql-skill">
              <img src="images/about/MySQL.png" alt="MySQL">
-              <img src="images/about/star-re.png" alt="star">
               <img src="images/about/star-re.png" alt="star">
               <img src="images/about/star-re.png" alt="star">
               <img src="images/about/star-re.png" alt="star">
@@ -195,10 +194,11 @@
                 <p class="reveal">Jivin-Jazz</p>
               </div>
             </a>
-
-            <a href="https://github.com/JonathanChaochen/Jivin-Jazz">
-              <p>Code on github</p>
-            </a>
+            <div class="code">
+              <a href="https://github.com/JonathanChaochen/Jivin-Jazz">
+                <p>Code on github</p>
+              </a>
+            </div>
           </div>
 
           <div class="assignment">
@@ -210,10 +210,11 @@
               </div>
 
             </a>
-
-            <a href="https://github.com/JonathanChaochen/timelog">
-             <p>Code on github</p>
-            </a>
+            <div class="code">
+              <a href="https://github.com/JonathanChaochen/timelog">
+                <p>Code on github</p>
+              </a>
+            </div>
           </div>
 
           <div class="assignment">
@@ -226,9 +227,11 @@
 
             </a>
 
-            <a href="https://github.com/JonathanChaochen/PHP-Assignment">
-             <p>Code on github</p>
-            </a>
+            <div class="code">
+              <a href="https://github.com/JonathanChaochen/PHP-Assignment">
+               <p>Code on github</p>
+              </a>
+            </div>
           </div>
 
           <div class="assignment">
@@ -238,12 +241,13 @@
                 <img src="images/psp3-re.png" alt="AngularJS SPA">
                 <p class="reveal">PSP3 SPA</p>
               </div>
-
             </a>
 
-            <a href="https://github.com/JonathanChaochen/angular1-psp3">
-             <p>Code on github</p>
-            </a>
+            <div class="code">
+              <a href="https://github.com/JonathanChaochen/angular1-psp3">
+               <p>Code on github</p>
+              </a>
+            </div>
           </div>
 
         </div> <!-- assessment ends -->
@@ -258,7 +262,7 @@
     <div id="contact">
       <div class="text-center">
         <h3>Contact Information</h3>
-        <a href="mailto:chaochen42@gmail.com"><p>Email: chaochen42@gmail.com</a></p>
+        <a href="mailto:chaochen42@gmail.com"><p> Email: chaochen42@gmail.com</a></p>
       </div>
 
 
