--- a/index.html
+++ b/index.html
@@ -53,6 +53,8 @@
 
   </nav>
 
+
+
     <div id="content" class="container-fluid">
 
         <div class="quotation" class="row">
@@ -174,8 +176,8 @@
 
     <div class="row" id="portfolio">
         <div class="col-xs-12 text-center portfolio">
-
-          <div class="project">
+          <div id="baobar">
+          <div class="project" >
             <h3> Bao Bar </h3>
             <a href="http://baobar.co.nz/" target="_blank">
             <div class="images">
@@ -183,6 +185,7 @@
                 <p class="reveal">baobar.co.nz</p>
             </div>
             </a>
+          </div>
           </div>
 
         <div class="assessment">
@@ -262,9 +265,9 @@
     <div id="contact">
       <div class="text-center">
         <h3>Contact Information</h3>
-        <a href="mailto:chaochen42@gmail.com"><p> Email: chaochen42@gmail.com</a></p>
+        <a href="mailto:chaochen42@gmail.com"><p> Email: chaochen42@gmail.com</p></a>
       </div>
-
+    </div>
 
 
 
@@ -278,7 +281,7 @@
                 <p>&copy; 2017 Chao Chen. All rights reserved</p>
             </div>
       </footer>
-      </div>
+
 
 
 
