--- a/forumvideo.html
+++ b/forumvideo.html
@@ -17,7 +17,6 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 
-
     <link rel="stylesheet" href="stylesheet.css">
 
   </head>
@@ -39,9 +38,9 @@
 
         <ul id="navlist" class="nav navbar-nav navbar-right">
           <li><a href="index.html" >Home</a></li>
-          <li><a href="about.html">About</a></li>
-          <li  class="selected"><a href="portfolio.html">Portfolio</a></li>
-          <li><a href="#">Contact</a></li>
+          <li><a href="index.html#about">About</a></li>
+          <li  class="selected"><a href="index.html#portfolio">Portfolio</a></li>
+          <li><a href="index.html#contact">Contact</a></li>
         </ul>
       </div>
     </div>
@@ -50,8 +49,6 @@
         <h1>Chao Chen</h1>
         <h2>PHP videos</h2>
     </div>
-
-
 
   </nav>
 
@@ -126,7 +123,6 @@
           </video>
         </div>
 
-
       </div>
 
     </div>
@@ -142,8 +138,6 @@
                 <p>&copy; 2017 Chao Chen. All rights reserved</p>
             </div>
       </footer>
-
-
 
 
   </body>
