--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
     <div id="title" class="text-center">
         <h1>Chao Chen</h1>
-        <h2>Web Developer</h2>
+        <h2 style=" color: #eee;">Web Developer</h2>
     </div>
 
   </nav>
@@ -91,7 +91,7 @@
 
             <img src="images/about/chaochen-re-1.jpg" alt="Chao Chen photo" class="img-circle img-responsive chao">
 
-          <h3 class="">Hi, I'm Chao</h3>
+          <h3>Hi, I'm Chao</h3>
 
           <p>I'm a web developer living in Christchurch, New ZeaLand now. I will graduated from Ara Institute of Canterbury in 12/2017.</p>
 
@@ -177,7 +177,9 @@
 
     <div class="row" id="portfolio">
         <div class="col-xs-12 text-center portfolio">
+        <h2>Portfolio</h2>
           <div id="baobar">
+
           <div class="project" >
             <h3> Bao Bar </h3>
             <a href="http://baobar.co.nz/" target="_blank">
@@ -265,7 +267,7 @@
     <!-- contact -->
     <div id="contact">
       <div class="text-center">
-        <h3>Contact Information</h3>
+        <h2>Contact Information</h2>
         <a href="mailto:chaochen42@gmail.com"><p> Email: chaochen42@gmail.com</p></a>
       </div>
     </div>
