--- a/forumvideo.html
+++ b/forumvideo.html
@@ -47,7 +47,7 @@
 
     <div id="title" class="text-center">
         <h1>Chao Chen</h1>
-        <h2>PHP videos</h2>
+        <h2 class="webdeveloper">PHP videos</h2>
     </div>
 
   </nav>
@@ -87,7 +87,7 @@
           </video>
         </div>
         <div class="clip">
-          <h4>Feature 6: Admin can delete topics and replies  </h4>
+          <h4>Feature 6: Admin delete topics </h4>
           <video controls="controls" name="feature 6" >
             <source src="video/bcpr294/feature6.mp4" type="video/mp4">
           </video>
