--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
     <div id="title" class="text-center">
         <h1>Chao Chen</h1>
-        <h2 style=" color: #eee;">Web Developer</h2>
+        <h2 class="webdeveloper">Web Developer</h2>
     </div>
 
   </nav>
