--- a/index.html
+++ b/index.html
@@ -37,7 +37,6 @@
         <a class="navbar-brand" href="index.html"> <img src="images/Chao-Logo-White.png" id="logo" alt="logo" ></a>
       </div>
       <div class="collapse navbar-collapse" id="myNavbar">
-
         <ul id="navlist" class="nav navbar-nav navbar-right">
           <li class="selected"><a href="index.html" >Home</a></li>
           <li><a href="#about">About</a></li>
@@ -143,6 +142,7 @@
 
             <div>
               <img src="images/about/java-logo-large.png" alt="Java">
+              <img src="images/about/star-re.png" alt="star">
               <img src="images/about/star-re.png" alt="star">
               <img src="images/about/star-re.png" alt="star">
             </div>
