--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 
           <h3>Hi, I'm Chao</h3>
 
-          <p>I'm a web developer living in Christchurch, New ZeaLand now. I will graduated from Ara Institute of Canterbury in 12/2017.</p>
+          <p>I'm a web developer living in Christchurch, New ZeaLand now. I graduated from Ara Institute of Canterbury in 12/2017.</p>
 
           <p>I am looking for a position related to my skills and qualifications and would like to enjoy developing new features within an Agile / Scrum team.  I would like to have lots of interesting new web projects to get stuck into.</p>
 
@@ -123,10 +123,10 @@
               <img src="images/about/star-re.png" alt="star">
               <img src="images/about/star-re.png" alt="star">
               <img src="images/about/star-re.png" alt="star">
+              <img src="images/about/star-re.png" alt="star">
             </div>
             <div>
               <img src="images/about/php-elephant.png" alt="php">
-              <img src="images/about/star-re.png" alt="star">
               <img src="images/about/star-re.png" alt="star">
               <img src="images/about/star-re.png" alt="star">
               <img src="images/about/star-re.png" alt="star">
@@ -251,6 +251,22 @@
 
             <div class="code">
               <a href="https://github.com/JonathanChaochen/angular1-psp3">
+               <p>Code on github</p>
+              </a>
+            </div>
+          </div>
+
+          <div class="assignment">
+            <h3>React Tutorial enhancement</h3>
+            <a href="http://www.webdeveloperchao.com/my-test-app/"  class="assignment-image">
+              <div class="images">
+                <img src="images/tic.png" alt="React SPA">
+                <p class="reveal">Tic Tac Toe</p>
+              </div>
+            </a>
+
+            <div class="code">
+              <a href="https://github.com/JonathanChaochen/my-test-app">
                <p>Code on github</p>
               </a>
             </div>
