--- a/index.html
+++ b/index.html
@@ -153,10 +153,9 @@
             <h3> Familiar frameworks:</h3>
             <a href="https://angularjs.org/">
               <img src="images/about/angular.png" alt="AngularJS">
-                <p class="reveal">123</p>
             </a>
-            <a href="https://vuejs.org/">
-              <img src="images/about/vuejs-logo.png" alt="Vue.js">
+            <a href="https://reactjs.org/">
+              <img src="images/about/logo-React.png" alt="react.js">
             </a>
             <a href="https://laravel.com/">
               <img src="images/about/laravel.png" alt="Laravel">
@@ -242,7 +241,7 @@
 
           <div class="assignment">
             <h3>PSP3 SPA</h3>
-            <a href="http://www.webdeveloperchao.com/angular1-psp3/"  class="assignment-image">
+            <a href="http://www.webdeveloperchao.com/angular1-psp3/"  class="assignment-image" target="_blank">
               <div class="images">
                 <img src="images/psp3-re.png" alt="AngularJS SPA">
                 <p class="reveal">PSP3 SPA</p>
@@ -250,7 +249,7 @@
             </a>
 
             <div class="code">
-              <a href="https://github.com/JonathanChaochen/angular1-psp3">
+              <a href="https://github.com/JonathanChaochen/angular1-psp3" >
                <p>Code on github</p>
               </a>
             </div>
@@ -258,7 +257,7 @@
 
           <div class="assignment">
             <h3>React Tutorial enhancement</h3>
-            <a href="http://www.webdeveloperchao.com/my-test-app/"  class="assignment-image">
+            <a href="http://www.webdeveloperchao.com/my-test-app/"  class="assignment-image" target="_blank">
               <div class="images">
                 <img src="images/tic.png" alt="React SPA">
                 <p class="reveal">Tic Tac Toe</p>
