change image :blush:

--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
               <img src="images/about/angular.png" alt="AngularJS">
             </a>
             <a href="https://reactjs.org/">
-              <img src="images/about/logo-React.png" alt="react.js">
+              <img src="images/about/react.png" alt="react.js">
             </a>
             <a href="https://laravel.com/">
               <img src="images/about/laravel.png" alt="Laravel">
