--- a/index.html
+++ b/index.html
@@ -271,6 +271,22 @@
             </div>
           </div>
 
+          <div class="assignment">
+            <h3>Seekesy</h3>
+            <a href="http://www.webdeveloperchao.com/my-test-app/"  class="assignment-image" target="_blank">
+              <div class="images">
+                <img src="images/seekesy-mobile.jpg" alt="React Native">
+                <p class="reveal">seekesy app</p>
+              </div>
+            </a>
+
+            <div class="code">
+              <a href="https://github.com/JonathanChaochen/my-test-app">
+               <p>Private Repo</p>
+              </a>
+            </div>
+          </div>
+
         </div> <!-- assessment ends -->
 
 
