--- a/index.html
+++ b/index.html
@@ -275,15 +275,15 @@
             <h3>Seekesy</h3>
             <a href="http://www.webdeveloperchao.com/my-test-app/"  class="assignment-image" target="_blank">
               <div class="images">
-                <img src="images/seekesy-mobile.jpg" alt="React Native">
+                <img src="images/seekesy-mobile.jpg" alt="Seekesy">
                 <p class="reveal">seekesy app</p>
               </div>
             </a>
 
             <div class="code">
-              <a href="https://github.com/JonathanChaochen/my-test-app">
+              <!-- <a href="https://github.com/JonathanChaochen/my-test-app"> -->
                <p>Private Repo</p>
-              </a>
+              <!-- </a> -->
             </div>
           </div>
 
