change seekesy link

--- a/index.html
+++ b/index.html
@@ -281,9 +281,9 @@
             </a>
 
             <div class="code">
-              <!-- <a href="https://github.com/JonathanChaochen/my-test-app"> -->
+              <a href="https://github.com/JonathanChaochen/Seekesy">
                <p>Private Repo</p>
-              <!-- </a> -->
+              </a>
             </div>
           </div>
 
