finish seekesy style

--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@
 
         <div class="assignment">
           <h3>Seekesy</h3>
-          <a href="seekesy.html/" class="assignment-image" target="_blank">
+          <a href="seekesy.html" class="assignment-image" target="_blank">
             <div class="images">
               <img src="images/seekesy-mobile.jpg" alt="Seekesy">
               <p class="reveal">seekesy app</p>
@@ -336,7 +336,7 @@
       </a>
     </div>
     <div id="footer-bottom">
-      <p>&copy; 2018   Chao Chen. All rights reserved</p>
+      <p>&copy; 2018 Chao Chen. All rights reserved</p>
     </div>
   </footer>
 
