--- a/seekesy.html
+++ b/seekesy.html
@@ -77,7 +77,8 @@
         around New Zealand efficiently and easily.</p>
       <p>I was given the opportunity to design and develop the Seekesy mobile app for my end of year project at Ara, working
         full time at Seekesy from August until late November of 2017. The app is developed for the iOS platform.</p>
-
+      <p>
+        <b>Technologies Used:</b> React Native, Redux, Firebase, Xcode etc.</p>
     </div>
 
   </div>
