--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 
       <p>I'm a web developer living in Christchurch, New ZeaLand now. I graduated from Ara Institute of Canterbury in 12/2017.
         I achieved above A in most courses at Ara. Especially familiar with developing app using frameworks like React. Recently
-        working on mobile application using React Native at Green House</p>
+        working on mobile application using React Native at Green House.</p>
 
       <p>I am looking for a position related to my skills and qualifications and would like to enjoy developing new features
         within an Agile / Scrum team. I would like to have lots of interesting new web projects to get stuck into.</p>
