add seekesy dashboard

--- a/index.html
+++ b/index.html
@@ -304,6 +304,22 @@
           </div>
         </div>
 
+        <div class="assignment">
+          <h3>Seekesy Dashboard</h3>
+          <a href="https://seekesy-eaca2.firebaseapp.com/" class="assignment-image" target="_blank">
+            <div class="images">
+              <img src="images/seekesy-dashboard.png" alt="Seekesy Dashoard">
+              <p class="reveal">seekesy dashboard</p>
+            </div>
+          </a>
+
+          <div class="code">
+            <a href="https://github.com/JonathanChaochen/adventure-checklist">
+              <p>Private Repo</p>
+            </a>
+          </div>
+        </div>
+
       </div>
       <!-- assessment ends -->
 
